latest items spacing fix

--- a/src/app/latest/latest.component.scss
+++ b/src/app/latest/latest.component.scss
@@ -1,7 +1,7 @@
 .latest {
     display: flex;
-    justify-content: space-around;
-
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .latest-item {
@@ -12,6 +12,7 @@
     justify-items: center;
     min-width: 96px;
     padding: 0.8em 0;
+    margin-right: 8px;
 
     h3 {
         font-size: 10px;
